--- a/.github/workflows/devopstest.yml
+++ b/.github/workflows/devopstest.yml
@@ -5,8 +5,6 @@ on:
   push:
     branches:
       - main
-      - homework-1
-
 
 jobs:
 
@@ -21,32 +19,26 @@ jobs:
     - name: Checkout code
       uses: actions/checkout@v2
 
-    - name: Download devopstest binary
+    - name: Download and setup autotest binary
       run: |
-        mkdir $GITHUB_WORKSPACE/.tools
-        cd $GITHUB_WORKSPACE/.tools
-        wget https://github.com/Yandex-Practicum/go-autotests-bin/raw/main/.tools/devopstest 
-
-    - name: Setup autotest binary
-      run: |
-        chmod -R +x $GITHUB_WORKSPACE/.tools/devopstest
-        mv $GITHUB_WORKSPACE/.tools/devopstest /usr/local/bin/devopstest
+        wget https://github.com/Yandex-Practicum/go-autotests-bin/raw/main/.tools/devopstest -O /usr/local/bin/devopstest
+        chmod +x /usr/local/bin/devopstest
 
     - name: "[Code increment #1] Start agent (and work at least 10s)"
       if: always()
       run: |
-        sh -c 'eval "timeout 10 go run ./cmd/agent/..."; if [ $? -eq 124 ]; then exit 0; else exit 100; fi'
+        sh -c 'eval "timeout 10 go run ./cmd/agent/main.go"; if [ $? -eq 124 ]; then exit 0; else exit 100; fi'
 
     - name: "[Code increment #2] Start agent (can receive data via 8080)"
       if: always()
       run: |
-        go run ./cmd/agent/... &
-        timeout 10 nc -l 8080
+        go run ./cmd/agent/main.go &
+        timeout 10 echo "" | nc -l 8080
 
     - name: "[Code increment #2] Start server (and listen 8080)"
       if: always()
       run: |
-        go run ./cmd/server/... &
+        go run ./cmd/server/main.go &
         timeout 10 sh -c 'until lsof -i:8080; do sleep 1s; done'
 
     - name: "[Code increment #2] Post"
@@ -77,7 +69,7 @@ jobs:
     - name: "[Code increment #3] Monitoring data"
       if: always()
       run: |
-        devopstest -test.v -test.run=^TestMonitoringData$ ./...
+        timeout 60 devopstest -test.v -test.run=^TestMonitoringData$ ./...
 
     # - name: "[Code increment #4] Check JSON API handler"
     #   if: always()
@@ -127,6 +119,6 @@ jobs:
     #   run: |
     #     devopstest -test.v -test.run=^TestSetGetMetricsWithRestartBefore$ ./...
     #     killall server
-    #     go run ./cmd/server/... &
+    #     go run ./cmd/server/main.go &
     #     timeout 10 sh -c 'until lsof -i:8080; do sleep 1s; done'
     #     devopstest -test.v -test.run=^TestSetGetMetricsWithRestartAfter$ ./...
