--- a/.github/workflows/statictest.yml
+++ b/.github/workflows/statictest.yml
@@ -22,11 +22,13 @@ jobs:
     - name: Checkout code
       uses: actions/checkout@v2
 
-    - name: Download devopstest binary
-      run: |
-        mkdir $GITHUB_WORKSPACE/.tools
-        cd $GITHUB_WORKSPACE/.tools
-        wget https://github.com/Yandex-Practicum/go-autotests-bin/raw/main/.tools/devopstest 
+    - name: Download statictest binary
+      uses: robinraju/release-downloader@v1
+      with:
+        repository: Yandex-Practicum/go-autotests-bin
+        latest: true
+        fileName: statictest
+        out-file-path: .tools
 
     - name: Setup autotest binary
       run: |
