--- a/.github/workflows/devopstest.yml
+++ b/.github/workflows/devopstest.yml
@@ -29,13 +29,10 @@ jobs:
       - name: Checkout code
         uses: actions/checkout@v2
 
-      - name: Download autotests binaries
-        uses: robinraju/release-downloader@v1.2
-        with:
-          repository: Yandex-Practicum/go-autotests-bin
-          latest: true
-          fileName: "*"
-          out-file-path: .tools
+    - name: Download and setup autotest binary
+      run: |
+        wget https://github.com/Yandex-Practicum/go-autotests-bin/raw/main/.tools/devopstest -O /usr/local/bin/devopstest
+        chmod +x /usr/local/bin/devopstest
 
       - name: Setup autotest binary
         run: |
