--- a/.github/workflows/devopstest.yml
+++ b/.github/workflows/devopstest.yml
@@ -5,7 +5,6 @@ on:
   push:
     branches:
       - main
-      - homework-1
 
 jobs:
 
@@ -36,11 +35,6 @@ jobs:
           latest: true
           fileName: "*"
           out-file-path: .tools
-
-      - name: Download and setup devopstest
-        run: |
-          wget https://github.com/Yandex-Practicum/go-autotests-bin/raw/main/.tools/devopstest -O $GITHUB_WORKSPACE/.tools/devopstest
-
 
       - name: Setup autotest binary
         run: |
@@ -240,16 +234,66 @@ jobs:
               -server-port=$SERVER_PORT \
               -file-storage-path=$TEMP_FILE
 
+# VIII. Задание к восьмому инкременту.
+# Доработать код сервера, для реализации механизма cжатия данных сервером в формате gzip
+# для контента с типом: application/json и text/html
 
+      - name: "Code increment #8"
+        if: always()
+        run: |
+          SERVER_PORT=$(random unused-port)
+          ADDRESS="localhost:${SERVER_PORT}"
+          TEMP_FILE=$(random tempfile)
+          devopstest -test.v -test.run=^TestIteration8 \
+              -agent-binary-path=cmd/agent/agent \
+              -binary-path=cmd/server/server \
+              -server-port=$SERVER_PORT \
+              -file-storage-path=$TEMP_FILE
 
+# IX. Задание к девятому инкременту.
+# Внимание: это учебный пример, в котором сделан акцент на закреплении пройденной темы,
+# а не на безопасности. В реальной жизни использовать подпись таким образом не следует.
+# Например остается возможность передать серверу перехваченные ранее данные с корректным хешом.
+# (старое значение счетчика)
 
-      # - name: "Code increment #8"
-      #   if: always()
-      #   run: |
-      #     devopstest -test.v -test.run=^TestIteration8$ \
-      #         -source-path=. \
-      #         -binary-path=cmd/server/server \
-      #         -database-dsn='postgres://postgres:postgres@postgres:5432/praktikum?sslmode=disable'
+# Реализовать механизм подписывания передаваемых данных по алгоритму sha256
+# Для этого расширим структуру
+#   type Metrics struct {
+# 	    ID    string   `json:"id"`              // Имя метрики
+# 	    MType string   `json:"type"`            // Параметр принимающий значение gauge или counter
+# 	    Delta *int64   `json:"delta,omitempty"` // Значение метрики в случае передачи counter
+# 	    Value *float64 `json:"value,omitempty"` // Значение метрики в случае передачи gauge
+# 	    Hash  string   `json:"hash,omitempty"`  // Значение hash-функции
+#   }
+# Хеш необходимо считать от строки, с учетом ключа, который предан агенту/серверу на старте.
+#   ** для counter - hash(fmt.Sprintf("%s:counter:%d", id, delta), key)
+#   ** для gauge - hash(fmt.Sprintf("%s:gauge:%f", id, value), key)
+
+# Агент:
+#   * добавить поддержку аргумента через флаг "-k=<КЛЮЧ>"
+#   * добавить поддержку аргумента через переменную окружения "KEY=<КЛЮЧ>"
+#   * при наличии ключа, агент должен вычислять хеш и передавать в поле hash запроса.
+
+# Сервер:
+#   * добавить поддержку аргумента через флаг "-k=<КЛЮЧ>"
+#   * добавить поддержку аргумента через переменную окружения "KEY=<КЛЮЧ>"
+#   * при наличии ключа, во время обработки запроса, сервер должен проверять соответствие полученного и вычисленного хеша.
+#     при не совпадении отбрасывать полученные данные и возвращать http.StatusBadRequest
+#   * при наличии ключа, на этапе формирования ответа, сервер должен
+#     вычислять хеш и передавать его в соответствующем поле hash ответа.
+
+      - name: "Code increment #9"
+        if: always()
+        run: |
+          SERVER_PORT=$(random unused-port)
+          ADDRESS="localhost:${SERVER_PORT}"
+          TEMP_FILE=$(random tempfile)
+          devopstest -test.v -test.run=^TestIteration9$ \
+              -agent-binary-path=cmd/agent/agent \
+              -binary-path=cmd/server/server \
+              -server-port=$SERVER_PORT \
+              -file-storage-path=$TEMP_FILE \
+              -key="${TEMP_FILE}"
 
       # - name: "Code increment #9"
       #   if: always()
