--- a/.github/workflows/devopstest.yml
+++ b/.github/workflows/devopstest.yml
@@ -5,7 +5,6 @@ on:
   push:
     branches:
       - main
-      - homework-1
 
 jobs:
 
@@ -86,6 +85,7 @@ jobs:
 #   * Имя метрики: "StackInuse", тип: gauge
 #   * Имя метрики: "StackSys", тип: gauge
 #   * Имя метрики: "Sys", тип: gauge
+#   * Имя метрики: "TotalAlloc", тип: gauge
 # К метрикам пакета runtime, добавить метрики:
 #   * Имя метрики: "PollCount", тип: counter - счетчик, увеличивающийся на 1, при каждом обновлении метрики из пакета runtime (на каждый pollInterval - см. ниже)
 #   * Имя метрики: "RandomValue", тип: gauge - обновляемое рандомное значение
@@ -128,8 +128,8 @@ jobs:
         if: always()
         run: |
           devopstest -test.v -test.run=^TestIteration2[b]*$ \
-            -source-path=.
-            -binary-path=cmd/server/server \
+            -source-path=. \
+            -binary-path=cmd/server/server
 
 # III. Задание к третьему инкременту.
 # Переписать код с использованием одного из распространенных web-фреймворков. Например: github.com/go-chi/chi
@@ -140,9 +140,9 @@ jobs:
       - name: "Code increment #3"
         if: always()
         run: |
-          devopstest -test.v -test.run=^TestIteration3[b]*$
-            -source-path=.
-            -binary-path=cmd/server/server \
+          devopstest -test.v -test.run=^TestIteration3[b]*$ \
+            -source-path=. \
+            -binary-path=cmd/server/server
 
 # IV. Задание к четвертому инкременту.
 # Дополнить(!) API сервера, которое позволяет принимать метрики в формате JSON.
@@ -185,9 +185,10 @@ jobs:
           SERVER_PORT=$(random unused-port)
           ADDRESS="localhost:${SERVER_PORT}"
           devopstest -test.v -test.run=^TestIteration5$ \
-              -agent-binary-path=cmd/agent/agent \
-              -binary-path=cmd/server/server \
-              -server-port=$SERVER_PORT
+            -source-path=. \
+            -agent-binary-path=cmd/agent/agent \
+            -binary-path=cmd/server/server \
+            -server-port=$SERVER_PORT
 
 # VI. Задание к пятому инкременту.
 # Доработать сервер, что бы он с заданной периодичностью сохранял текущие значения метрик на диск в указанный файл.
@@ -205,10 +206,11 @@ jobs:
           ADDRESS="localhost:${SERVER_PORT}"
           TEMP_FILE=$(random tempfile)
           devopstest -test.v -test.run=^TestIteration6$ \
-              -agent-binary-path=cmd/agent/agent \
-              -binary-path=cmd/server/server \
-              -server-port=$SERVER_PORT \
-              -file-storage-path=$TEMP_FILE
+            -source-path=. \
+            -agent-binary-path=cmd/agent/agent \
+            -binary-path=cmd/server/server \
+            -server-port=$SERVER_PORT \
+            -file-storage-path=$TEMP_FILE
 
 # VII. Задание к седьмому инкременту.
 # Доработать код, что бы он умел принимать аргументы с использованием флагов.
@@ -230,10 +232,11 @@ jobs:
           ADDRESS="localhost:${SERVER_PORT}"
           TEMP_FILE=$(random tempfile)
           devopstest -test.v -test.run=^TestIteration7$ \
-              -agent-binary-path=cmd/agent/agent \
-              -binary-path=cmd/server/server \
-              -server-port=$SERVER_PORT \
-              -file-storage-path=$TEMP_FILE
+            -source-path=. \
+            -agent-binary-path=cmd/agent/agent \
+            -binary-path=cmd/server/server \
+            -server-port=$SERVER_PORT \
+            -file-storage-path=$TEMP_FILE
 
 # VIII. Задание к восьмому инкременту.
 # Доработать код сервера, для реализации механизма cжатия данных сервером в формате gzip
@@ -246,10 +249,11 @@ jobs:
           ADDRESS="localhost:${SERVER_PORT}"
           TEMP_FILE=$(random tempfile)
           devopstest -test.v -test.run=^TestIteration8 \
-              -agent-binary-path=cmd/agent/agent \
-              -binary-path=cmd/server/server \
-              -server-port=$SERVER_PORT \
-              -file-storage-path=$TEMP_FILE
+            -source-path=. \
+            -agent-binary-path=cmd/agent/agent \
+            -binary-path=cmd/server/server \
+            -server-port=$SERVER_PORT \
+            -file-storage-path=$TEMP_FILE
 
 # IX. Задание к девятому инкременту.
 # Внимание: это учебный пример, в котором сделан акцент на закреплении пройденной темы,
@@ -290,11 +294,12 @@ jobs:
           ADDRESS="localhost:${SERVER_PORT}"
           TEMP_FILE=$(random tempfile)
           devopstest -test.v -test.run=^TestIteration9$ \
-              -agent-binary-path=cmd/agent/agent \
-              -binary-path=cmd/server/server \
-              -server-port=$SERVER_PORT \
-              -file-storage-path=$TEMP_FILE \
-              -key="${TEMP_FILE}"
+            -source-path=. \
+            -agent-binary-path=cmd/agent/agent \
+            -binary-path=cmd/server/server \
+            -server-port=$SERVER_PORT \
+            -file-storage-path=$TEMP_FILE \
+            -key="${TEMP_FILE}"
 
       # - name: "Code increment #9"
       #   if: always()
